src/testdata/responses.rs
// error

pub const NOTICE_DATA_FARM_CONNECTION: &str = "4|2|-1|2107|HMDS data farm connection is inactive.|";

// accounts

pub const MANAGED_ACCOUNT: &str = "15|1|DU1234567,DU7654321|";

pub const ACCOUNT_UPDATE_MULTI_CASH_BALANCE: &str = "73|1|9000|DU1234567||CashBalance|94629.71|USD||";
pub const ACCOUNT_UPDATE_MULTI_CURRENCY: &str = "73|1|9000|DU1234567||Currency|USD|USD||";
pub const ACCOUNT_UPDATE_MULTI_STOCK_MARKET_VALUE: &str = "73|1|9000|DU1234567||StockMarketValue|0.00|BASE||";
pub const ACCOUNT_UPDATE_MULTI_END: &str = "74|1|9000||";

// contracts

pub const MARKET_RULE: &str = "93|26|1|0|0.01|";
